Fix gradient text font clipping (home page nav menu); add keys to learning path.

--- a/assets/css/zerotohero.scss
+++ b/assets/css/zerotohero.scss
@@ -1159,6 +1159,7 @@ button.bg-primary:focus {
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent; 
   -moz-text-fill-color: transparent;
+  padding-top: 0.04em;
 }
 
 .admin-remove-button,
